--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ko">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -15,10 +15,13 @@
             border: 1px solid #ddd;
             background-color: #f9f9f9;
         }
+        .highlight {
+            background-color: yellow; /* 배경색을 노란색으로 설정 */
+        }
     </style>
 </head>
 <body>
-    <h1>중복된 값 찾기 결과 v1.03</h1>
+    <h1>중복된 값 찾기 결과 v1.04</h1>
     <button id="postfetchData">포스트 데이터 번호생성</button>
     <!-- 사용자 입력 -->
     <h2>사용자 입력</h2>
@@ -31,6 +34,7 @@
     <script>
         document.getElementById('postfetchData').addEventListener('click', async () => {
             const resultDiv = document.getElementById('result');
+            resultDiv.classList.remove('highlight');
             resultDiv.textContent = "데이터를 가져오는 중...";
             resultDiv.innerHTML = ""; // 기존 내용을 초기화
             // 상태 메시지 관리용 DOM 추가
@@ -52,7 +56,7 @@
                 for(let i=1; i<=5; i++){
                     const generatedNumbers = generateLottoNumbers();
                     console.log(`생성된 번호 (${i + 1}번째 요청):`, generatedNumbers);
-                    const response = await fetch('/check', {//https://lottonumbers-rjvsqrqm0-veat-visuals-projects.vercel.app/check
+                    const response = await fetch('/check', {
                         method: 'POST',
                         headers: { 'Content-Type': 'application/json' },
                         body: JSON.stringify({ numbers: generatedNumbers }),
@@ -62,12 +66,14 @@
                     const requestResult = document.createElement('div');
                     requestResult.innerHTML = `<h4>${i}번째 응답:</h4>`;
                     if (data.length > 0) {
+                        requestResult.classList.add('highlight');
                         data.forEach(({ row, key }) => {
                             const rowText = document.createElement('p');
                             rowText.textContent = `중복됨: ${row.join(", ")} | 회차: ${key}`;
                             requestResult.appendChild(rowText);
                         });
                     } else {
+                        requestResult.classList.remove('highlight');
                         const noData = document.createElement('p');
                         noData.textContent = `중복된 데이터가 없습니다. ${generatedNumbers.join(", ")}`;
                         requestResult.appendChild(noData);
@@ -110,12 +116,14 @@
                 });
                 const data = await response.json();
                 if (data.length > 0) {
+                    resultDiv.classList.add('highlight');
                     data.forEach(({ row, key }) => {
                         const resultText = document.createElement('p');
                         resultText.textContent = `중복됨: ${row.join(", ")} | 회차: ${key}`;
                         resultDiv.appendChild(resultText);
                     });
                 } else {
+                    resultDiv.classList.remove('highlight');
                     const noData = document.createElement('p');
                     noData.textContent = `중복된 데이터가 없습니다. ${numbers.join(", ")}`;
                     resultDiv.appendChild(noData);
