--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     </style>
 </head>
 <body>
-    <h1>중복된 값 찾기 결과 v1.05</h1>
+    <h1>로또번호 생성 및 확인 2025년 01월 04일/h1>
     <button id="postfetchData">포스트 데이터 번호생성</button>
     <!-- 사용자 입력 -->
     <h2>사용자 입력</h2>
